Travel::Status::DE::DeutscheBahn 1.01 - Sat Dec 03 2011

    * Detect ambiguous input errors (available via errstr)
    * Add language switch for additional information (german/english)

    [Travel::Status::DE::DeutscheBahn::Result]
    * Result: Add line (== train) and date accessors

    [db-ris]
    * Add -l / --lang option

Travel::Status::DE::DeutscheBahn 1.00 - Sun Sep 04 2011

    [db-ris]
    * Add --full-route option

    [Travel::Status::DE::DeutscheBahn]
    * Fix bug when receiving no platform numbers from the DB RIS

    [Travel::Status::DE::DeutscheBahn::Result]
    * Add route_timetable accessor containing station names and
      their corresponding arrival times

Travel::Status::DE::DeutscheBahn 0.05 - Tue Aug 09 2011

    [Travel::Status::DE::DeutscheBahn]
    * Fix ->results returning duplicate connections when accessed more than
      one time
    * new: Only die when encountering wrong options, set ->errstr otherwise
    * Adds new ->errstr accessor to check for request errors

Travel::Status::DE::DeutscheBahn 0.04 - Wed Jul 13 2011

    [Travel::Status::DE::DeutscheBahn::Result]
    * The info accessor now strips the mostly useless "k.A." / "pünktlich"
      (train on time) text parts
    * Add (slightly experimental) route_interesting accessor
    * Add delay accessor

Travel::Status::DE::DeutscheBahn 0.03 - Wed Jul 13 2011

    * Clarify derl dependency (we actually need >= 5.10.1)

    [Travel::Status::DE::DeutscheBahn]
    * Strip leading / trailing whitespace in result fields

Travel::Status::DE::DeutscheBahn 0.02 - Wed Jul 06 2011

    [db-ris]
    * Only display info when a train is late, not when on time / unknown
    * Add --ignore-late option

    [Travel::Status::DE::DeutscheBahn]
    * Add route_raw accessor
    * Proper HTTP request error handling
    * Strip leading whitespace from ::Result info
    * Do not include canceled stops in the route

Travel::Status::DE::DeutscheBahn 0.01 - Mon Jun 27 2011

    * Initial release