@@ -1,10 +1,10 @@
 {
-   "abstract" : "Interface to the DeutscheBahn online\narrival/departure monitor",
+   "abstract" : "Interface to the DeutscheBahn online",
    "author" : [
       "Copyright (C) 2011 by Daniel Friesel E<lt>derf@finalrewind.orgE<gt>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.38, CPAN::Meta::Converter version 2.110440",
+   "generated_by" : "Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921",
    "license" : [
       "perl_5"
    ],
@@ -16,25 +16,25 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "File::Slurp" : 0,
-            "Test::Compile" : 0,
-            "Test::More" : 0,
-            "Test::Pod" : 0
+            "File::Slurp" : "0",
+            "Test::Compile" : "0",
+            "Test::More" : "0",
+            "Test::Pod" : "0"
          }
       },
       "configure" : {
          "requires" : {
-            "Module::Build" : "0.38"
+            "Module::Build" : "0.40"
          }
       },
       "runtime" : {
          "requires" : {
-            "Carp" : 0,
+            "Carp" : "0",
             "Class::Accessor" : "0.16",
-            "Getopt::Long" : 0,
-            "LWP::UserAgent" : 0,
-            "List::Util" : 0,
-            "POSIX" : 0,
+            "Getopt::Long" : "0",
+            "LWP::UserAgent" : "0",
+            "List::Util" : "0",
+            "POSIX" : "0",
             "XML::LibXML" : "1.70",
             "perl" : "v5.10.1"
          }
@@ -43,11 +43,11 @@
    "provides" : {
       "Travel::Status::DE::DeutscheBahn" : {
          "file" : "lib/Travel/Status/DE/DeutscheBahn.pm",
-         "version" : "1.01"
+         "version" : "1.02"
       },
       "Travel::Status::DE::DeutscheBahn::Result" : {
          "file" : "lib/Travel/Status/DE/DeutscheBahn/Result.pm",
-         "version" : "1.01"
+         "version" : "1.02"
       }
    },
    "release_status" : "stable",
@@ -56,5 +56,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "1.01"
+   "version" : "1.02"
 }
