@@ -2,7 +2,7 @@ Travel::Status::DE::DeutscheBahn -
 Interface to the DeutscheBahn online departure monitor
 ------------------------------------------------------
 
-* <http://derf.homelinux.org/projects/Travel-Status-DE-DeutscheBahn/>
+* <http://finalrewind.org/projects/Travel-Status-DE-DeutscheBahn/>
 
 
 Dependencies
