@@ -1,4 +1,0 @@
-https://github.com/marcust/bahnclient
-http://pastebin.com/F4zJ8AL8 SOAP
-http://demo.hafas.de/hafas-res/sbb/xml/47r/hafasXMLInterface.xsd für extxml
-http://reiseauskunft.bahn.de/bin/extxml.exe
